--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.3",
+    "@swimlane/ngx-charts": "^20.5.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ngx-print": "^1.5.1",
